// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/sidebar_category/sidebar_category_menu should match snapshot and contain correct buttons 1`] = `
<Fragment>
  <SidebarMenu
    ariaLabel="Category Menu"
    buttonAriaLabel="Category Menu"
    id="SidebarCategoryMenu-category1"
    onToggle={[MockFunction]}
    tooltipText="Category options"
  >
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="icon-pencil-outline"
          />
        }
        id="rename-category1"
        onClick={[Function]}
        show={true}
        text="Rename Category"
      />
      <MenuItemAction
        icon={
          <i
            className="icon-plus"
          />
        }
        id="createChannel-category1"
        onClick={[Function]}
        show={true}
        text="Create Channel"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="icon-folder-plus-outline"
          />
        }
        id="create-category1"
        onClick={[Function]}
        show={true}
        text="Create Category"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="icon-bell-outline"
          />
        }
        id="delete-category1"
        isDangerous={true}
        onClick={[Function]}
        show={true}
        text="Delete Category"
      />
    </MenuGroup>
  </SidebarMenu>
  <Connect(NewChannelFlow)
    canCreatePrivateChannel={true}
    canCreatePublicChannel={true}
    channelType="O"
    onModalDismissed={[Function]}
    show={false}
  />
</Fragment>
`;

exports[`components/sidebar/sidebar_category/sidebar_category_menu should match snapshot when category is favorites 1`] = `
<Fragment>
  <SidebarMenu
    ariaLabel="Category Menu"
    buttonAriaLabel="Category Menu"
    id="SidebarCategoryMenu-category1"
    onToggle={[MockFunction]}
    tooltipText="Category options"
  >
    <MenuGroup />
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="icon-folder-plus-outline"
          />
        }
        id="create-category1"
        onClick={[Function]}
        show={true}
        text="Create Category"
      />
    </MenuGroup>
  </SidebarMenu>
  <Connect(NewChannelFlow)
    canCreatePrivateChannel={true}
    canCreatePublicChannel={true}
    channelType="O"
    onModalDismissed={[Function]}
    show={false}
  />
</Fragment>
`;

exports[`components/sidebar/sidebar_category/sidebar_category_menu should match snapshot when user does not have permissions 1`] = `
<Fragment>
  <SidebarMenu
    ariaLabel="Category Menu"
    buttonAriaLabel="Category Menu"
    id="SidebarCategoryMenu-category1"
    onToggle={[MockFunction]}
    tooltipText="Category options"
  >
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="icon-pencil-outline"
          />
        }
        id="rename-category1"
        onClick={[Function]}
        show={true}
        text="Rename Category"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="icon-folder-plus-outline"
          />
        }
        id="create-category1"
        onClick={[Function]}
        show={true}
        text="Create Category"
      />
    </MenuGroup>
    <MenuGroup>
      <MenuItemAction
        icon={
          <i
            className="icon-bell-outline"
          />
        }
        id="delete-category1"
        isDangerous={true}
        onClick={[Function]}
        show={true}
        text="Delete Category"
      />
    </MenuGroup>
  </SidebarMenu>
  <Connect(NewChannelFlow)
    canCreatePrivateChannel={false}
    canCreatePublicChannel={false}
    channelType="O"
    onModalDismissed={[Function]}
    show={false}
  />
</Fragment>
`;
